tests/ui/bind_col.stderr
error[E0505]: cannot move out of `val` because it is borrowed
  --> $DIR/bind_col.rs:38:10
   |
36 |     stmt.SQLBindCol(1, SQL_C_SLONG, Some(&val), None);
   |                                          ---- borrow of `val` occurs here
37 |
38 |     drop(val);
   |          ^^^ move out of `val` occurs here
39 |     stmt.SQLFreeHandle();
   |     ---- borrow later used here
